engine/codex-rs/tui/src/bottom_pane/mentions_v2/snapshots/codex_tui__bottom_pane__mentions_v2__render__tests__narrow_scrolled.snap
---
source: tui/src/bottom_pane/mentions_v2/render_tests.rs
expression: text(&buffer)
---
  Mentions
  Files, directories, plugins, skills

   All Results   Filesystem Only     ›

  Type to search mentions
↑
  Plugin 04  Tools and workflows  Plugin
  Plugin 05  Tools and workflows  Plugin
  Plugin 06  Tools and workflows  Plugin
  Plugin 07  Tools and workflows  Plugin
  Plugin 08  Tools and workflows  Plugin
  Plugin 09  Tools and workflows  Plugin
  界.rs      src/                 File
› plain.rs   src/                 File

  enter/tab insert · esc close · ↑/↓ …
