engine/codex-rs/tui/src/bottom_pane/mentions_v2/snapshots/codex_tui__bottom_pane__mentions_v2__render__tests__one_row.snap
---
source: tui/src/bottom_pane/mentions_v2/render_tests.rs
expression: text(&buffer)
---
› plain.rs   src/                 File
