engine/codex-rs/tui/src/bottom_pane/mentions_v2/snapshots/codex_tui__bottom_pane__mentions_v2__render__tests__short.snap
---
source: tui/src/bottom_pane/mentions_v2/render_tests.rs
assertion_line: 71
expression: text(&buffer)
---
  Mentions
  Files, directories, plugins, skills
   All Results   Filesystem Only     ›
  Type to search mentions
  界.rs      src/                 File
› plain.rs   src/                 File
  enter/tab insert · esc close · ↑/↓ …
